--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,11 @@
 /LICENSE.txt -text
 Spotlight[!!-~]Importer/English.lproj/InfoPlist.strings svneol=native#unset
 Spotlight[!!-~]Importer/English.lproj/schema.strings svneol=native#unset
+bookmarks/docs.google.com[!!-~]–[!!-~]Google[!!-~]Docs.duck -text
+bookmarks/mirror.switch.ch[!!-~]–[!!-~]FTP.duck -text
+bookmarks/s3.amazonaws.com[!!-~]–[!!-~]S3.duck -text
+bookmarks/storage.clouddrive.com[!!-~]–[!!-~]Cloud[!!-~]Files.duck -text
+bookmarks/svn.cyberduck.ch[!!-~]–[!!-~]WebDAV[!!-~](HTTP).duck -text
 /build-mac.xml -text
 ca.lproj/Alert.nib/classes.nib -text
 ca.lproj/Alert.nib/info.nib -text
