--- a/.gitattributes
+++ b/.gitattributes
@@ -1204,6 +1204,8 @@ lib/httpmime-4.1.1.jar -text
 lib/icu4j-module-4.4.1.1.jar -text
 lib/jakarta-oro-2.0.8.jar -text
 lib/java-xmlbuilder-0.4.jar -text
+lib/jaxb-api-2.2.2.jar -text
+lib/jaxb-impl-2.2.2.jar -text
 lib/jaxen-1.1.1.jar -text
 lib/jdom-1.1.jar -text
 lib/jets3t-0.8.2.jar -text
@@ -1220,6 +1222,7 @@ lib/signpost-commonshttp4-1.2.1.1.jar -text
 lib/signpost-core-1.2.1.1.jar -text
 lib/slf4j-api-1.6.1.jar -text
 lib/slf4j-log4j12-1.6.1.jar -text
+lib/stax-api-1.0-2.jar -text
 lv.lproj/Alert.nib/classes.nib -text
 lv.lproj/Alert.nib/info.nib -text
 lv.lproj/Alert.nib/keyedobjects.nib -text
