--- a/source/ch/cyberduck/Cyberduck.csproj
+++ b/source/ch/cyberduck/Cyberduck.csproj
@@ -84,6 +84,10 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ActiveButtons, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\ActiveButtons.dll</HintPath>
+    </Reference>
     <Reference Include="AutomaticUpdater, Version=2.6.3.0, Culture=neutral, PublicKeyToken=d2050be9b2e72e40, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\AutomaticUpdater.dll</HintPath>
@@ -614,7 +618,7 @@
   <!-- to manage version number -->
   <!-- to generate our personnal version info -->
   <Target Name="AssemblyInfo">
-    <AssemblyInfo CodeLanguage="CS" OutputFile="Properties\AssemblyInfo.cs" AssemblyTitle="Cyberduck" AssemblyDescription="FTP and Cloud Files Browser" AssemblyCompany="Cyberduck" AssemblyProduct="Cyberduck" AssemblyCopyright="© 2010 Yves Langisch. All rights reserved." ComVisible="false" Guid="5fc1c120-24c7-469d-b52b-9bce20db208d" AssemblyVersion="$(Version)" AssemblyFileVersion="$(Version)" AssemblyInformationalVersion="$(ShortVersion)" Condition="$(Version) != '0' " />
+    <AssemblyInfo CodeLanguage="CS" OutputFile="Properties\AssemblyInfo.cs" AssemblyTitle="Cyberduck" AssemblyDescription="FTP and Cloud Files Browser" AssemblyCompany="Cyberduck" AssemblyProduct="Cyberduck" AssemblyCopyright="© 2010-2011 Yves Langisch. All rights reserved." ComVisible="false" Guid="5fc1c120-24c7-469d-b52b-9bce20db208d" AssemblyVersion="$(Version)" AssemblyFileVersion="$(Version)" AssemblyInformationalVersion="$(ShortVersion)" Condition="$(Version) != '0' " />
   </Target>
   <!-- We launch these two targets -->
   <Target Name="BeforeBuild">
