--- a/.gitattributes
+++ b/.gitattributes
@@ -1058,6 +1058,7 @@ lib/Growl.framework/Versions/A/Growl -text
 lib/Growl.framework/Versions/A/Resources/Info.plist -text
 lib/Growl.framework/Versions/Current -text
 lib/IKVM.OpenJDK.Beans.dll -text
+lib/IKVM.OpenJDK.Charsets.dll -text
 lib/IKVM.OpenJDK.Core.dll -text
 lib/IKVM.OpenJDK.Security.dll -text
 lib/IKVM.OpenJDK.SwingAWT.dll -text
