--- a/sandbox.plist
+++ b/sandbox.plist
@@ -18,27 +18,27 @@
 		<key>com.apple.security.temporary-exception.apple-events</key>
 		<!-- The ability to send Apple events to the specified destination application. Used for ODB editors. -->
 		<array>
-	        <string>de.codingmonkeys.SubEthaEdit</string>
+	        <string>de.codingmonkeys.subethaedit</string>
 	        <string>com.barebones.bbedit</string>
 	        <string>com.barebones.textwrangler</string>
 	        <string>com.macromates.textmate</string>
 	        <string>com.transtex.texeditplus</string>
-	        <string>jp.co.artman21.JeditX</string>
+	        <string>jp.co.artman21.jeditx</string>
 	        <string>net.mimikaki.mi</string>
-	        <string>org.smultron.Smultron</string>
-	        <string>org.fraise.Fraise</string>
-	        <string>com.aynimac.CotEditor</string>
+	        <string>org.smultron.smultron</string>
+	        <string>org.fraise.fraise</string>
+	        <string>com.aynimac.coteditor</string>
 	        <string>com.macrabbit.cssedit</string>
-	        <string>com.talacia.Tag</string>
-	        <string>org.skti.skEdit</string>
+	        <string>com.talacia.tag</string>
+	        <string>org.skti.skedit</string>
 	        <string>com.cgerdes.ji</string>
-	        <string>com.optima.PageSpinner</string>
-	        <string>com.hogbaysoftware.WriteRoom</string>
-	        <string>org.vim.MacVim</string>
-	        <string>com.forgedit.ForgEdit</string>
-	        <string>com.tacosw.TacoHTMLEdit</string>
-	        <string>com.macrabbit.Espresso</string>
-	        <string>net.experiya.ScinteX</string>
+	        <string>com.optima.pagespinner</string>
+	        <string>com.hogbaysoftware.writeroom</string>
+	        <string>org.vim.macvim</string>
+	        <string>com.forgedit.forgedit</string>
+	        <string>com.tacosw.tacohtmledit</string>
+	        <string>com.macrabbit.espresso</string>
+	        <string>net.experiya.scintex</string>
 		</array> 
 	</dict>
 </plist>
