--- a/.gitattributes
+++ b/.gitattributes
@@ -1442,6 +1442,7 @@ pl.lproj/Transfer.strings -text svneol=unset#text/utf-16
 profiles/Azure.cyberduckprofile -text
 profiles/Dropbox.cyberduckprofile -text
 profiles/Dunkel[!!-~]Cloud[!!-~]Storage.cyberduckprofile -text
+profiles/GreenQloud.cyberduckprofile -text
 profiles/Internap[!!-~]XIPCloud[!!-~]Storage.cyberduckprofile -text
 profiles/Rackspace[!!-~]UK.cyberduckprofile -text
 profiles/S3[!!-~]Unsecure.cyberduckprofile -text
