--- a/source/ch/cyberduck/Cyberduck.csproj
+++ b/source/ch/cyberduck/Cyberduck.csproj
@@ -199,6 +199,8 @@
     <Compile Include="core\Utils.cs" />
     <Compile Include="core\VirtualFileDataObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ui\controller\GotoController.cs" />
+    <Compile Include="ui\controller\IGotoPromptView.cs" />
     <Compile Include="ui\controller\IUpdateView.cs" />
     <Compile Include="ui\controller\MainController.cs" />
     <Compile Include="ui\controller\threading\InfoBackgroundAction.cs" />
@@ -229,6 +231,12 @@
     </Compile>
     <Compile Include="ui\winforms\controls\VistaMenuOwnerDrawn.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ui\winforms\GotoPromptForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\winforms\GotoPromptForm.Designer.cs">
+      <DependentUpon>GotoPromptForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ui\winforms\serializer\HostPlistReader.cs" />
     <Compile Include="ui\winforms\serializer\ProtocolPlistReader.cs" />
