--- a/.gitattributes
+++ b/.gitattributes
@@ -1445,6 +1445,7 @@ profiles/GreenQloud.cyberduckprofile -text
 profiles/Internap[!!-~]XIPCloud[!!-~]Storage.cyberduckprofile -text
 profiles/Rackspace[!!-~]UK.cyberduckprofile -text
 profiles/S3[!!-~]Unsecure.cyberduckprofile -text
+profiles/Swift[!!-~]Unsecure.cyberduckprofile -text
 pt_BR.lproj/Alert.nib/classes.nib -text
 pt_BR.lproj/Alert.nib/info.nib -text
 pt_BR.lproj/Alert.nib/keyedobjects.nib -text
@@ -1843,6 +1844,7 @@ source/ch/cyberduck/core/Rendezvous.cs -text
 source/ch/cyberduck/core/Rendezvous.java -text
 source/ch/cyberduck/core/RendezvousCollection.java -text
 source/ch/cyberduck/core/RendezvousFactory.java -text
+source/ch/cyberduck/core/Scheme.java -text
 source/ch/cyberduck/core/Serializable.java -text
 source/ch/cyberduck/core/SerializableDictionary.cs -text
 source/ch/cyberduck/core/Speedometer.java -text
