Add sonar ant task

--- a/.gitattributes
+++ b/.gitattributes
@@ -1195,6 +1195,7 @@ lib/ext/ant-dotnet-1.0.jar -text
 lib/ext/ant-ikvmc.0.5.jar -text
 lib/ext/junit-4.6.jar -text
 lib/ext/nunit.framework.dll -text
+lib/ext/sonar-ant-task-1.2.jar -text
 lib/ganymed-ssh-2-260.jar -text
 lib/gdata-client-1.0.jar -text
 lib/gdata-client-meta-1.0.jar -text
