--- a/.gitattributes
+++ b/.gitattributes
@@ -1210,6 +1210,8 @@ lib/httpclient-4.1.2.jar -text
 lib/httpcore-4.1.3.jar -text
 lib/httpmime-4.1.2.jar -text
 lib/icu4j-module-4.4.1.1.jar -text
+lib/jackson-core-asl-1.9.2.jar -text
+lib/jackson-mapper-asl-1.9.2.jar -text
 lib/jakarta-oro-2.0.8.jar -text
 lib/java-xmlbuilder-0.4.jar -text
 lib/jaxb-api-2.2.2.jar -text
