Add IKVM Jdbc.dll dependency

--- a/source/ch/cyberduck/Cyberduck.csproj
+++ b/source/ch/cyberduck/Cyberduck.csproj
@@ -118,6 +118,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\IKVM.OpenJDK.Core.dll</HintPath>
     </Reference>
+    <Reference Include="IKVM.OpenJDK.Jdbc">
+      <HintPath>..\..\..\lib\IKVM.OpenJDK.Jdbc.dll</HintPath>
+    </Reference>
     <Reference Include="IKVM.OpenJDK.Security, Version=0.42.0.3, Culture=neutral, PublicKeyToken=13235d27fcbfff58, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\IKVM.OpenJDK.Security.dll</HintPath>
