--- a/sandbox.plist
+++ b/sandbox.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
-		<key>com.apple.security.app-protection</key>
+		<key>com.apple.security.app-sandbox</key>
 		<true/>
 		<key>com.apple.security.network.server</key>
 		<!-- The ability to open a socket for listening. Used for Active (PORT) FTP data connections -->
