--- a/tools.properties
+++ b/tools.properties
@@ -17,6 +17,5 @@
 # dkocher@cyberduck.ch
 #
 
-cyberduck.version.major=4
-cyberduck.version.minor=1.4
-updater.version=2.6.14.265
+ikvm.home=C:/workspace/ikvm-0.46.0.1
+wyupdate.home=c:/workspace/wyupdate
