Add dependency for Jackson JSON parser

--- a/.gitattributes
+++ b/.gitattributes
@@ -1043,6 +1043,7 @@ lib/Growl.framework/Versions/Current -text
 lib/IKVM.OpenJDK.Beans.dll -text
 lib/IKVM.OpenJDK.Charsets.dll -text
 lib/IKVM.OpenJDK.Core.dll -text
+lib/IKVM.OpenJDK.Jdbc.dll -text
 lib/IKVM.OpenJDK.Security.dll -text
 lib/IKVM.OpenJDK.SwingAWT.dll -text
 lib/IKVM.OpenJDK.Text.dll -text
