Former-commit-id: b620f280d86857316d38682c7063c89de6992c68

--- a/source/ch/cyberduck/Cyberduck.csproj
+++ b/source/ch/cyberduck/Cyberduck.csproj
@@ -279,6 +279,9 @@
       <DependentUpon>ConnectionForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="ui\winforms\controls\ClickLinkLabel.resx">
+      <DependentUpon>ClickLinkLabel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ui\winforms\controls\TransferControl.resx">
       <DependentUpon>TransferControl.cs</DependentUpon>
       <SubType>Designer</SubType>
