--- a/.gitattributes
+++ b/.gitattributes
@@ -2661,6 +2661,7 @@ sv.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 sv.lproj/Status.strings -text svneol=unset#text/utf-16
 sv.lproj/Transfer.strings -text svneol=unset#text/utf-16
 test/ch/cyberduck/Test.csproj -text
+test/ch/cyberduck/core/PreferencesTest.java -text
 test/ch/cyberduck/core/ProxyTest.java -text
 test/ch/cyberduck/ui/controller/LocalImplTest.cs -text svneol=unset#application/octet-stream
 test/ch/cyberduck/ui/controller/PersistentFormHandlerTest.cs -text
