--- a/build.xml
+++ b/build.xml
@@ -65,7 +65,6 @@
         <pathelement location="${build.unittests}"/>
         <fileset dir="${build}">
             <include name="*.jar"/>
-            <include name="*.dylib"/>
         </fileset>
     </path>
 
@@ -214,7 +213,12 @@
                includes="**/*.java">
             <classpath refid="test.classpath"/>
         </javac>
-        <junit fork="yes" printsummary="on" filtertrace="on" haltonfailure="no" showoutput="yes">
+        <copy todir="${build}/${configuration}">
+            <fileset dir="${lib}">
+                <include name="*.dylib"/>
+            </fileset>
+        </copy>
+        <junit fork="yes" printsummary="on" filtertrace="on" haltonfailure="no" showoutput="yes" dir="${home}">
             <classpath refid="test.classpath"/>
             <formatter type="plain" usefile="false"/>
             <formatter type="xml" extension=".xml" usefile="true"/>
@@ -223,7 +227,7 @@
                     <include name="**/*Test.class"/>
                 </fileset>
             </batchtest>
-            <sysproperty key="java.library.path" value="${lib}"/>
+            <sysproperty key="jna.boot.library.path" value="${build}/${configuration}"/>
         </junit>
         <junitreport todir="${build.unittests.reports}/html">
             <fileset dir="${build.unittests.reports}">
@@ -235,10 +239,12 @@
 
     <target name="sonar" depends="revision">
         <property name="sonar.sources" value="${source}"/>
+        <property name="sonar.tests" value="${unittests}"/>
         <property name="sonar.binaries" value="${build.classes}"/>
+         <pathconvert property="sonar.libraries" refid="build.classpath" pathsep=","/>
         <property name="sonar.jdbc.driver" value="com.mysql.jdbc.Driver"/>
         <property name="sonar.jdbc.url" value="jdbc:mysql://${sonar.host}:3306/sonar?useUnicode=true&amp;characterEncoding=utf8"/>
-		<property name="sonar.host.url" value="http://${sonar.host}/" />
+        <property name="sonar.host.url" value="http://${sonar.host}/" />
         <sonar:sonar key="ch.cyberduck:cyberduck" version="${svn.revision}" xmlns:sonar="antlib:org.sonar.ant"/>
     </target>
 </project>
