--- a/build.xml
+++ b/build.xml
@@ -63,6 +63,7 @@
         <path refid="build.classpath"/>
         <pathelement location="${build.classes}"/>
         <pathelement location="${build.unittests}"/>
+        <pathelement location="${build}/${configuration}"/>
         <fileset dir="${build}">
             <include name="*.jar"/>
         </fileset>
@@ -204,21 +205,23 @@
         </manifest>
     </target>
 
-    <target name="test" depends="build" description="Runs all test cases and generate report">
+    <target name="test-compile" depends="build">
         <javac debug="${debug}"
                encoding="utf-8"
+               source="1.5"
+               target="1.5"
                deprecation="off"
                srcdir="${unittests}"
                destdir="${build.unittests}"
                includes="**/*.java">
             <classpath refid="test.classpath"/>
         </javac>
-        <copy todir="${build}/${configuration}">
-            <fileset dir="${lib}">
-                <include name="*.dylib"/>
-            </fileset>
-        </copy>
-        <junit fork="yes" printsummary="on" filtertrace="on" haltonfailure="no" showoutput="yes" dir="${home}">
+    </target>
+
+    <target name="test" depends="test-compile" description="Runs all test cases and generate report">
+        <echo message="${build}/${configuration}"/>
+        <junit printsummary="on" filtertrace="on" haltonfailure="no" showoutput="yes"
+               dir="${home}">
             <classpath refid="test.classpath"/>
             <formatter type="plain" usefile="false"/>
             <formatter type="xml" extension=".xml" usefile="true"/>
@@ -227,7 +230,9 @@
                     <include name="**/*Test.class"/>
                 </fileset>
             </batchtest>
-            <sysproperty key="jna.boot.library.path" value="${build}/${configuration}"/>
+            <sysproperty key="java.library.path" value="${build}/${configuration}"/>
+            <sysproperty key="jna.library.path" value="${build}/${configuration}"/>
+            <sysproperty key="jna.boot.library.path" value="${lib}"/>
         </junit>
         <junitreport todir="${build.unittests.reports}/html">
             <fileset dir="${build.unittests.reports}">
@@ -241,8 +246,8 @@
         <property name="sonar.sources" value="${source}"/>
         <property name="sonar.tests" value="${unittests}"/>
         <property name="sonar.binaries" value="${build.classes}"/>
-         <pathconvert property="sonar.libraries" refid="build.classpath" pathsep=","/>
-        <property name="sonar.host.url" value="http://${sonar.host}/" />
+        <pathconvert property="sonar.libraries" refid="build.classpath" pathsep=","/>
+        <property name="sonar.host.url" value="http://${sonar.host}/"/>
         <sonar:sonar key="ch.cyberduck:cyberduck" version="${svn.revision}" xmlns:sonar="antlib:org.sonar.ant"/>
     </target>
 </project>
