Add HP Cloud Object Storage Profile
Former-commit-id: 4d7ebc7506714e664e660930adb629c6630e2119

--- a/.gitattributes
+++ b/.gitattributes
@@ -1952,6 +1952,7 @@ profiles/Azure.cyberduckprofile -text
 profiles/Dropbox.cyberduckprofile -text
 profiles/Dunkel[!!-~]Cloud[!!-~]Storage.cyberduckprofile -text
 profiles/GreenQloud.cyberduckprofile -text
+profiles/HP[!!-~]Cloud[!!-~]Object[!!-~]Storage.cyberduckprofile -text
 profiles/Internap[!!-~]XIPCloud[!!-~]Storage.cyberduckprofile -text
 profiles/Rackspace[!!-~]UK.cyberduckprofile -text
 profiles/S3[!!-~]Unsecure.cyberduckprofile -text
