--- a/build.xml
+++ b/build.xml
@@ -220,7 +220,7 @@
 
     <target name="test" depends="test-compile" description="Runs all test cases and generate report">
         <echo message="${build}/${configuration}"/>
-        <junit printsummary="on" filtertrace="on" haltonfailure="no" showoutput="yes"
+        <junit fork="yes" forkmode="once" printsummary="on" filtertrace="on" haltonfailure="no" showoutput="yes"
                dir="${home}">
             <classpath refid="test.classpath"/>
             <formatter type="plain" usefile="false"/>
@@ -242,12 +242,16 @@
         </junitreport>
     </target>
 
-    <target name="sonar" depends="revision">
+    <target name="sonar" depends="build">
         <property name="sonar.sources" value="${source}"/>
         <property name="sonar.tests" value="${unittests}"/>
         <property name="sonar.binaries" value="${build.classes}"/>
         <pathconvert property="sonar.libraries" refid="build.classpath" pathsep=","/>
-        <property name="sonar.host.url" value="http://${sonar.host}/"/>
+        <property name="sonar.host.url" value="http://${sonar.host}:9000/"/>
+        <property name="sonar.jdbc.url" value="jdbc:mysql://${sonar.host}:3306/sonar?useUnicode=true&amp;characterEncoding=utf8"/>
+        <property name="sonar.jdbc.driverClassName" value="com.mysql.jdbc.Driver"/>
+        <property name="sonar.core.codeCoveragePlugin" value="jacoco"/>
+        <property name="sonar.jacoco.antTargets" value="test"/>
         <sonar:sonar key="ch.cyberduck:cyberduck" version="${svn.revision}" xmlns:sonar="antlib:org.sonar.ant"/>
     </target>
 </project>
