--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
     <property name="configuration" value="Release"/>
     <property name="build.classes" value="${build}/classes"/>
     <property name="build.unittests" value="${build}/unittests"/>
-    <property name="build.unittests.reports" value="${build}/unittests/junit_reports"/>
+    <property name="build.unittests.reports" value="${build}/report"/>
     <property name="config" value="${home}/config"/>
     <property name="img" value="${home}/img"/>
     <property name="lib" value="${home}/lib"/>
@@ -246,11 +246,13 @@
         <property name="sonar.sources" value="${source}"/>
         <property name="sonar.tests" value="${unittests}"/>
         <property name="sonar.binaries" value="${build.classes}"/>
+        <property name="sonar.surefire.reportsPath" value="${build.unittests.reports}" />
         <pathconvert property="sonar.libraries" refid="build.classpath" pathsep=","/>
         <property name="sonar.host.url" value="http://${sonar.host}:9000/"/>
         <property name="sonar.jdbc.url" value="jdbc:mysql://${sonar.host}:3306/sonar?useUnicode=true&amp;characterEncoding=utf8"/>
         <property name="sonar.jdbc.driverClassName" value="com.mysql.jdbc.Driver"/>
         <property name="sonar.core.codeCoveragePlugin" value="jacoco"/>
+        <property name="sonar.dynamicAnalysis" value="reuseReports"/>
         <property name="sonar.jacoco.antTargets" value="test"/>
         <sonar:sonar key="ch.cyberduck:cyberduck" version="${svn.revision}" xmlns:sonar="antlib:org.sonar.ant"/>
     </target>
