--- a/.gitattributes
+++ b/.gitattributes
@@ -1691,6 +1691,7 @@ lib/Windows7.DesktopIntegration.dll -text
 lib/activation-1.1.1.jar -text
 lib/apache-mime4j-0.6.jar -text
 lib/asm-3.3.1.jar -text
+lib/aws-java-sdk-1.3.6.jar -text
 lib/backport-util-concurrent-3.1.jar -text
 lib/bcmail-jdk15-145.jar -text
 lib/bcprov-jdk15-145.jar -text
