--- a/sandbox.plist
+++ b/sandbox.plist
@@ -12,6 +12,8 @@
 		<true/>
 		<key>com.apple.security.files.downloads.read-write</key>
 		<true/>
+		<key>com.apple.security.files.user-selected.read-write</key>
+		<true/>
 		<key>com.apple.security.print</key>
 		<!-- The ability to print -->
 		<true/>
