Former-commit-id: 296cf98537f72865b64f68801da686d39b9c940d

--- a/.gitattributes
+++ b/.gitattributes
@@ -2569,6 +2569,7 @@ source/ch/cyberduck/ui/winforms/ActivityForm.Designer.cs -text
 source/ch/cyberduck/ui/winforms/ActivityForm.cs -text
 source/ch/cyberduck/ui/winforms/ActivityForm.resx -text
 source/ch/cyberduck/ui/winforms/BaseForm.Designer.cs -text
+source/ch/cyberduck/ui/winforms/BaseForm.cs -text
 source/ch/cyberduck/ui/winforms/BaseForm.resx -text
 source/ch/cyberduck/ui/winforms/BookmarkForm.Designer.cs -text
 source/ch/cyberduck/ui/winforms/BookmarkForm.cs -text
